fix sliding issue destroy method on firefox

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -59,10 +59,6 @@ textarea {
 }
 
 
-
-
-
-
 /* toggle 3
 -------------------------------------------------- */
 
@@ -82,7 +78,7 @@ textarea {
 }
 
 .toggle-3 .toggle-handle {
-	top: -8px; width: 20px; height: 20px;
+	top: -24px; width: 48px; height: 48px;
 	background: red;
 	border-radius: 50%;
 }
